# Emotion-Classifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  EXPERIMENTS.md  PLAN.md  PRD.md  README.md  SRS.md  SYSTEM_DESIGN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  keep-alive.yml  sync-to-hf.yml
Dataset/: 23-24test_emotion_data tanpa netral kurang 500.csv  train paling fix.csv
configs/: data.yaml  rag.yaml  retrieval_eval.yaml  training.yaml
reports/: drift_report.md  rag_eval_report.md
scripts/: push_model_to_hub.py
src/: __init__.py
src/api/: __init__.py  classifier.py  config.py  dependencies.py  main.py  schemas.py  stats.py
src/data/: __init__.py  labels.py  prepare_dataset.py  preprocessing.py  slang_dict.py
src/llm/: __init__.py  base.py  factory.py  gemini_client.py  groq_client.py  ollama_client.py  prompt_loader.py
src/monitoring/: __init__.py  check_drift.py  prediction_log.py
src/rag/: __init__.py  bm25.py  build_index.py  chat.py  corpus.py  embeddings.py  evaluate_rag.py  evaluate_retrieval.py  formatting.py  insight.py  retriever.py  vector_store.py
src/tracking/: mlflow_utils.py  registry.py
src/training/: __init__.py  baseline.py  dataset.py  embedding_baseline.py  metrics.py  setfit_baseline.py  train_indobert.py
tests/: test_api.py  test_dataset.py  test_labels.py  test_llm.py  test_metrics.py  test_monitoring.py  test_preprocessing.py  test_rag.py
web/: .env.example  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.jsx  index.css
(+14 files in other folders)
